Skaffold.yaml added

--- a/deployment/udaconnect-api.yaml
+++ b/deployment/udaconnect-api.yaml
@@ -33,8 +33,7 @@ spec:
       containers:
         - image: udacity/nd064-udaconnect-api:latest
           name: udaconnect-api
-          imagePullPolicy: Always
-          command: ["/bin/sh", "-c", "env && sleep 3600"]
+          imagePullPolicy: "IfNotPresent"
           env:
             - name: DB_USERNAME
               valueFrom:
