--- a/deployment/udaconnect-personsapi.yaml
+++ b/deployment/udaconnect-personsapi.yaml
@@ -33,7 +33,7 @@ spec:
       containers:
         - image: gmj06/udaconnect-personsapi:latest
           name: udaconnect-personsapi
-          imagePullPolicy: Always
+          imagePullPolicy: "IfNotPresent"
           env:
             - name: DB_USERNAME
               valueFrom:
