--- a/deployment/udaconnect-app.yaml
+++ b/deployment/udaconnect-app.yaml
@@ -33,7 +33,7 @@ spec:
       containers:
         - image: udacity/nd064-udaconnect-app:latest
           name: udaconnect-app
-          imagePullPolicy: Always
+          imagePullPolicy: "IfNotPresent"
           resources:
             requests:
               memory: "128Mi"
