--- a/modules/connectionsapi/Dockerfile
+++ b/modules/connectionsapi/Dockerfile
@@ -6,7 +6,15 @@ RUN apk add --no-cache gcc musl-dev linux-headers geos libc-dev postgresql-dev
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-EXPOSE 5000
+EXPOSE 5002
 
 COPY . .
 CMD ["flask", "run", "--host", "0.0.0.0"]
+
+# FROM python:3.7-alpine
+# RUN mkdir /backend
+# WORKDIR /backend
+# COPY requirements.txt /backend/requirements.txt
+# RUN pip install --upgrade pip && \
+#     pip install -r requirements.txt
+# COPY . .
