--- a/modules/personsapi/Dockerfile
+++ b/modules/personsapi/Dockerfile
@@ -1,13 +1,14 @@
 FROM python:3.7-alpine
-#RUN mkdir /services
+RUN mkdir /backend
 
-WORKDIR .
+WORKDIR /backend
 
 RUN apk add --no-cache gcc musl-dev linux-headers geos libc-dev postgresql-dev
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-EXPOSE 5000
+EXPOSE 5004
 
 COPY . .
 CMD ["flask", "run", "--host", "0.0.0.0"]
+
