Changed the port for Persons and  Connections API in frontend app

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -11,6 +11,10 @@ build:
     tryImportMissing: false
     useDockerCLI: false
   artifacts:
+    - image: gmj06/udaconnect-app
+      context: modules/frontend
+      docker:
+        dockerfile: Dockerfile
     - image: gmj06/udaconnect-connectionsapi
       context: modules/connectionsapi
       docker:
