--- a/deployment/db-configmap.yaml
+++ b/deployment/db-configmap.yaml
@@ -5,5 +5,7 @@ data:
   DB_NAME: "geoconnections"
   DB_HOST: "postgres"
   DB_PORT: "5432"
+  TOPIC_NAME: "locations-topic"
+  KAFKA_SERVER: "kafka-service:9092"
 metadata:
   name: db-env
